# paper-research

./: .gitignore  README.md  pyproject.toml
docs/: iteration-log.md
examples/: sample_paper.txt
paper_research/: __init__.py  __main__.py  benchmark.py  cli.py  docx.py  export.py  io.py  models.py  scoring.py  text.py  web_search.py  workflow.py
tests/: test_cli_io.py  test_docs.py  test_docx.py  test_scoring.py  test_structure.py  test_web_search.py  test_workflow.py
